# edge-virtualization-platform

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PrivacyPolicy.md  README.md  check.mk  pyproject.toml  sources.mk  version.mk
.devcontainer/: README.md
.github/: CODEOWNERS  pull_request_template.md
LICENSES/: Apache-2.0.txt  MIT.txt
configs/: default.config  defaults.mk  linux-docker.config  linux-multi-privman-keylog.config  linux.config  nuttx.config  sdk-linux.config  unit-test-all-hubs-wasm.config
docs/: Makefile  README.md  conf.py  glossary.rst  index.rst  license.rst  requirements.txt
include/: evp_mbedtls_config.h
scripts/: blob-prof.awk  checker-python.sh  cmake-flatcc.sh  cmake-libweb.sh  cmake-mbedtls.sh  cmake-nng.sh  cmake-wasm-micro-runtime.sh  evp-agent-generate-certificates.sh  formatter-python.sh  gen-blob-prof.awk  mk-agent-deb.sh  mk-agent-sdk-deb.sh  mk-app-sdk-deb.sh  mk-sbom  mk-sdk-deb.sh  mkdeps.sh  print-http-stats.sh  rules.mk  run-reuse.sh  sources
src/: Makefile  parson.c  parson.h
test/: Makefile  libdynstr  run-tests.sh
test_modules/: Makefile  blob_config.h  config_echo.c  download_azure_file.c  download_azure_memory.c  download_http_ext_memory.c  download_http_ext_range_file.c  download_http_file.c  exit_voluntarily.c  file_reader.c  file_writer.c  hub_scalability_test.c  hub_scalability_test.h  hub_scalability_test_stderr.c  hub_scalability_test_stdout.c  invalid_free.c  log.h  messaging.c  nng_test.c  parson.c  (+18 more)
(+611 files in other folders)
